<resources>
    <string name="app_name">Auth Retrofit</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="remember_me">Remember me</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="log_out">Log Out</string>
    <string name="errorEmpty">Required* Please Fill This Field</string>
    <string name="errorEmail"><![CDATA[>Required* Does Not matches Email Pattern!]]></string>
</resources>