<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_top"
            app:layout_constraintBottom_toTopOf="@id/tvRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_33dp"
            android:layout_marginStart="@dimen/dimen_23dp"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_95dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/register"
            android:textSize="@dimen/dimen_48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_63dp"
            android:src="@drawable/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_56dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@drawable/bg_button_light_blue"
            android:hint="@string/email"
            android:paddingStart="@dimen/dimen_18dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:textColorHint="@color/dark_blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogin"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/dimen_24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_44dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@drawable/bg_button_light_blue"
            android:hint="@string/username"
            android:paddingStart="@dimen/dimen_18dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:textColorHint="@color/dark_blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:textSize="@dimen/dimen_24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_44dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@drawable/bg_button_light_blue"
            android:hint="@string/password"
            android:paddingStart="@dimen/dimen_18dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:textColorHint="@color/dark_blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUsername"
            app:startIconDrawable="@drawable/ic_password_lock"
            app:startIconTint="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword"
                android:textSize="@dimen/dimen_24sp" />
        </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRepeatPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_44dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@drawable/bg_button_light_blue"
            android:hint="@string/repeat_password"
            android:paddingStart="@dimen/dimen_18dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:textColorHint="@color/dark_blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:startIconDrawable="@drawable/ic_password_lock"
            app:startIconTint="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textPassword"
                android:textSize="@dimen/dimen_24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_49dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_96dp"
            android:background="@drawable/bg_button_dark_blue"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilRepeatPassword" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>